Try harder to avoid overlap with wiki navbar

--- a/mediawiki/skins/Libvirt/components/libvirt.less
+++ b/mediawiki/skins/Libvirt/components/libvirt.less
@@ -100,7 +100,8 @@
     margin-right: auto;
     padding: 0px;
     padding-bottom: 1em;
-    max-width: 60em;
+    padding-right: 24%;
+    max-width: 75%;
 }
 
 body.index #content,
